--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="7" />
+    <uses-sdk android:minSdkVersion="8" />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -13,30 +13,27 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
 
-        <!-- 註冊receiver CallAlarm -->
-        <receiver
-            android:name="electricwakeup.baka.com.CallAlarm"
-            android:process=":remote" />
-
         <activity
             android:name="electricwakeup.baka.com.ElectricWake"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="electricwakeup.baka.com.DeviceListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/select_device"
             android:theme="@android:style/Theme.Dialog" />
+
         <activity
             android:name="electricwakeup.baka.com.AlarmAlert"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name" />
+
+        <service android:name="electricwakeup.baka.com.BluetoothChatService" />
     </application>
 
 </manifest>
