--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
+        android:name="electricwakeup.baka.com.MyApplication"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
 
